feat: add dockerfiles and changed docker-compose

--- a/.env
+++ b/.env
@@ -7,4 +7,11 @@ PORT=4000
 # Prisma supports the native connection string format for PostgreSQL, MySQL, SQLite, SQL Server, MongoDB and CockroachDB.
 # See the documentation for all the connection string options: https://pris.ly/d/connection-strings
 
-DATABASE_URL="postgres://postgres:postgres@localhost:5433/postgres?schema=public"
+POSTGRES_USER="postgres"
+POSTGRES_PASSWORD="postgres"
+POSTGRES_HOST="postgres"
+POSTGRES_PORT=5433
+POSTGRES_PORT_LISTEN=5432
+POSTGRES_DB="home_library"
+
+DATABASE_URL=postgresql://${POSTGRES_USER}:${POSTGRES_PASSWORD}@${POSTGRES_HOST}:${POSTGRES_PORT_LISTEN}/${POSTGRES_DB}
