--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,10 @@
 PORT=4000
 
-DATABASE_URL="postgresql://postgres:postgres@localhost:5432/postgres?schema=public"
+POSTGRES_USER="postgres"
+POSTGRES_PASSWORD="postgres"
+POSTGRES_HOST="postgres"
+POSTGRES_PORT=5432
+POSTGRES_DB="home_library"
+
+DATABASE_URL=postgresql://${POSTGRES_USER}:${POSTGRES_PASSWORD}@${POSTGRES_HOST}:${POSTGRES_PORT}/${POSTGRES_DB}
+
