--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,15 +1,52 @@
-# Use postgres/example user/password credentials
-version: '3.9'
-
 services:
-
-  db:
-    image: postgres
-    restart: always
+  api:
+    build:
+      context: .
+      dockerfile: Dockerfile
+    depends_on:
+      postgres:
+        condition: service_started
+    networks:
+      - backend
+    restart: unless-stopped
+    env_file:
+      - .env
     environment:
-      POSTGRES_USER: postgres
-      POSTGRES_PASSWORD: postgres
+      - PORT=${PORT}
+      - DATABASE_URL=${DATABASE_URL}
     ports:
-      - "5433:5432"
+      - ${PORT}:${PORT}
     volumes:
-      - ~/apps/postgres:/var/lib/postgresql/data
+      - /usr/src/app/node_modules
+      - ./src:/usr/src/app/src
+  postgres:
+    build:
+      context: .
+      dockerfile: Db.Dockerfile
+    networks:
+      - backend
+    environment:
+      - POSTGRES_USER=${POSTGRES_USER}
+      - POSTGRES_PASSWORD=${POSTGRES_PASSWORD}
+      - POSTGRES_HOST=${POSTGRES_HOST}
+      - POSTGRES_PORT=${POSTGRES_PORT}
+      - POSTGRES_PORT_LISTEN=${POSTGRES_PORT_LISTEN}
+      - POSTGRES_DB=${POSTGRES_DB}
+    ports:
+      - ${POSTGRES_PORT}:${POSTGRES_PORT_LISTEN}
+    expose:
+      - ${POSTGRES_PASSWORD}
+    healthcheck:
+      test: ['CMD-SHELL', 'pg_isready -U postgres -d home_library']
+      interval: 10s
+      timeout: 5s
+      retries: 5
+      start_period: 10s
+    restart: unless-stopped
+    volumes:
+      - PGDATA:/var/lib/postgresql/data
+volumes:
+  PGDATA:
+networks:
+  backend:
+    driver: bridge
