--- a/package.json
+++ b/package.json
@@ -19,7 +19,14 @@
     "test:refresh": "cross-env TEST_MODE=auth jest --testPathPattern refresh.e2e.spec.ts --noStackTrace --runInBand",
     "test:watch": "jest --watch",
     "test:cov": "jest --coverage",
-    "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand"
+    "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
+    "docker:build": "docker-compose up --build",
+    "docker:up": "docker-compose up",
+    "docker:down": "docker-compose down",
+    "docker:start": "docker-compose start",
+    "docker:stop": "docker-compose stop",
+    "docker-audit:api": "docker scout cves --details local://nodejs2024q1-service-api:latest",
+    "docker-audit:db": "docker scout cves --details local://nodejs2024q1-service-postgres:latest"
   },
   "dependencies": {
     "@nestjs/common": "^8.0.0",
