--- a/.env
+++ b/.env
@@ -13,5 +13,6 @@ POSTGRES_HOST="postgres"
 POSTGRES_PORT=5432
 POSTGRES_PORT_LISTEN=5432
 POSTGRES_DB="home_library"
+JWT_SECRET="secret"
 
 DATABASE_URL=postgresql://${POSTGRES_USER}:${POSTGRES_PASSWORD}@${POSTGRES_HOST}:${POSTGRES_PORT_LISTEN}/${POSTGRES_DB}
