--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
     "docker:build": "docker-compose up --build",
     "docker:up": "docker-compose up",
+    "docker:migration": "docker exec -it nodejs2024q1-service-api-1 npx prisma migrate dev --name init",
     "docker:down": "docker-compose down",
     "docker:start": "docker-compose start",
     "docker:stop": "docker-compose stop",
@@ -33,6 +34,7 @@
     "@nestjs/core": "^8.0.0",
     "@nestjs/jwt": "^9.0.0",
     "@nestjs/mapped-types": "^1.0.1",
+    "@nestjs/passport": "^10.0.3",
     "@nestjs/platform-express": "^8.0.0",
     "@prisma/client": "^5.11.0",
     "bcrypt": "^5.0.1",
@@ -40,6 +42,8 @@
     "class-validator": "^0.13.2",
     "dotenv": "^16.0.1",
     "http-status-codes": "^2.2.0",
+    "passport": "^0.7.0",
+    "passport-jwt": "^4.0.1",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
     "rxjs": "^7.2.0",
